--- a/discord.env
+++ b/discord.env
@@ -1,1 +1,5 @@
-DISCORD_TOKEN = MTA0Mjc3ODgyMjAwNjgwMDM4NA.G77xMX.pjvMGWnKX1Ucwkqjaub43vhTdKWi89cYeI4wWc
+DISCORD_TOKEN = MTA0Mjc3ODgyMjAwNjgwMDM4NA.GxEveT.lL_4pn9-KCsA9HtH_7ml91DI6KMXb5i4f0Tu98
+genel='127225'
+komutlar='1642'
+s<l<vr<='90'
+ZORT = 0
